src/polychem/snapshots/smithereens__polychem__composition_parser__tests__chemical_composition-10.snap
---
source: src/polychem/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Chlorine-37",
            5,
        ),
    ],
    [
        (
            Remove,
            2,
            "Proton",
        ),
    ],
)
