src/polychem/snapshots/smithereens__polychem__composition_parser__tests__chemical_composition-14.snap
---
source: src/polychem/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Nitrogen",
            1,
        ),
        (
            "Hydrogen",
            2,
        ),
    ],
    [],
)
