src/polychem/snapshots/smithereens__polychem__composition_parser__tests__chemical_composition-3.snap
---
source: src/polychem/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Oxygen",
            1,
        ),
        (
            "Hydrogen",
            1,
        ),
    ],
    [
        (
            Add,
            1,
            "Electron",
        ),
    ],
)
