src/polychem/snapshots/smithereens__polychem__composition_parser__tests__chemical_composition-8.snap
---
source: src/polychem/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Deuterium",
            2,
        ),
        (
            "Oxygen",
            1,
        ),
    ],
    [],
)
