src/polychem/snapshots/smithereens__polychem__composition_parser__tests__chemical_composition.snap
---
source: src/polychem/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Hydrogen",
            2,
        ),
        (
            "Oxygen",
            1,
        ),
    ],
    [],
)
